@@ -1,3 +1,8 @@
+2001-09-24  Tambet Ingo  <tambet@ximian.com>
+
+	* users-conf.in: Added missing report keywords. Moved one
+	here from report.pl.in.
+
 2001-09-21  Tambet Ingo  <tambet@ximian.com>
 
 	* x.pl.in: Found and fixed some small typos. 
